# Citizen-Sleeper-Save-Editor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  citizen_sleeper_editor.py  pyproject.toml  test_citizen_sleeper_editor.py
.github/workflows/: ci.yml
src/cs_save_editor/: __init__.py  __main__.py  _tcltk.py  chooser.py  cli.py  covers.py  crypto.py  format.py  games.py  gui.py  labels.py  saves.py
tests/: conftest.py  test_covers.py  test_crypto.py  test_format.py  test_games.py  test_labels.py  test_saves.py
